# pm_ws25

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-cuda.txt  requirements.txt  setup.sh
.github/workflows/: flake8.yml
dataloaders/: README.md  base.py  csv.py  net.py  pull.py  sources.yaml  util.py  xes.py
documents/: 2025.10.31 Summary.md  Background Info.md  Block-structured nets.md  Experiments.md  Extended State (Marking) Equation.md  Feature Engineering  Generating Training Data.md  Heuristic Functions.md  Simulator.md  State (Marking) Equation.md  TODO.md  Task Spec.md  task_spec.md
experiments/: test.py  test_existing_heuristics.py
experiments/baseline/: timings.py
experiments/dataset/survey/: .gitignore  compute_summary.py  log_consistency.ipynb  log_stats.ipynb  net_atlas.py  net_stats.ipynb
experiments/simulation/: composition_ops.ipynb  driver.py  models.py  noise.py  simulate.ipynb  simulate.py  structured_net.py
pm4py/: Dockerfile  requirements_stable.txt
pm4py/examples/: execute_everything.py
pm4py/pm4py/: __init__.py  analysis.py  conformance.py  discovery.py  hof.py  meta.py  ml.py  ocel.py  read.py  stats.py  utils.py  vis.py  write.py
pm4py/pm4py/algo/: __init__.py
pm4py/pm4py/algo/conformance/: __init__.py
pm4py/pm4py/algo/discovery/: __init__.py
pm4py/pm4py/objects/: __init__.py
pm4py/pm4py/statistics/: __init__.py
pm4py/pm4py/util/: __init__.py  constants.py
pm4py/pm4py/visualization/: __init__.py
pm4py/tests/: execute_tests.py  other_tests.py
(+60 files in other folders)
